feat: complete min_in_cols implementation with proper structure
- Add header file with namespace
- Add implementation with error handling
- Add main application
- Follow project structure requirements

--- a/tasks/seq/peterson_r_min_in_cols/CMakeLists.txt
+++ b/tasks/seq/peterson_r_min_in_cols/CMakeLists.txt
@@ -4,6 +4,7 @@ project(peterson_r_min_in_cols)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(peterson_r_min_in_cols main.cpp)
+# Main executable
+add_executable(peterson_r_min_in_cols src/main.cpp src/peterson_r_min_in_cols_seq.cpp)
 
 install(TARGETS peterson_r_min_in_cols DESTINATION bin)
