fix: add test files and remove accidental files

--- a/tasks/seq/peterson_r_min_in_cols/CMakeLists.txt
+++ b/tasks/seq/peterson_r_min_in_cols/CMakeLists.txt
@@ -7,4 +7,10 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # Main executable
 add_executable(peterson_r_min_in_cols src/main.cpp src/peterson_r_min_in_cols_seq.cpp)
 
-install(TARGETS peterson_r_min_in_cols DESTINATION bin)
+# Functional tests
+add_executable(seq_func_tests func_tests/func_tests.cpp src/peterson_r_min_in_cols_seq.cpp)
+
+# Performance tests
+add_executable(seq_perf_tests perf_tests/perf_tests.cpp src/peterson_r_min_in_cols_seq.cpp)
+
+install(TARGETS peterson_r_min_in_cols seq_func_tests seq_perf_tests DESTINATION bin)
